--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-runtime": "^6.11.6",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "find-my-iphone": "^1.1.1",
     "lodash": "^4.16.3",
     "request": "^2.75.0",
     "request-promise": "^4.1.1"
