--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,9 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-*.zip
-
-# This is not the right way to do this, will fix
-!src/
-/index.js
-/bankDataHelper.js
+/*.js
+src/config.js
 config.js
 .env
-/phoneFinderHelper.js
+build
+lib
