--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch ./src --exec babel src --out-dir .",
     "start": "node ./lib/index.js",
-    "build": "babel src --out-dir .",
-    "lambda": "npm run build; node-lambda package -A ."
+    "build": "babel src --out-dir lib",
+    "lambda": "npm run build; node-lambda package"
   },
   "author": "",
   "license": "ISC",
